--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,13 +27,13 @@ body {
   font-family: 'Geo', sans-serif;
   text-shadow: 10px #ffff;
   margin: 100px 0px 50px 0px;
-  /*animation: headingAnimation 2s infinite;
-  animation-direction: alternate-reverse;*/
+  animation: headingAnimation 2s infinite;
+  animation-direction: alternate-reverse;
 }
 
 @keyframes headingAnimation {
   0% {color:red; font-size: 200px;}
-  100% {color:yellow; font-size: 250px;}
+  100% {color:yellow; font-size: 210px;}
 }
 
 .landingList {
