--- a/about/stylesheet.css
+++ b/about/stylesheet.css
@@ -77,7 +77,7 @@ h2, h3, p {
 }
 
 p {
-  font-family: 'Shadows Into Light', sans-serif;
+  font-family: 'Rock Salt', cursive;
   font-size: 35px;
 }
 
